CubeProgrammer_API.h


typedef struct dfuDeviceInfo
{
    char usbIndex[10];                  
    int busNumber;                      
    int addressNumber;                  
    char productId[100];                
    char serialNumber[100];             
    unsigned int dfuVersion;            
}dfuDeviceInfo;
typedef struct usartConnectParameters
{
    char portName[100];             
    unsigned int  baudrate;         
    usartParity parity;             
    unsigned char dataBits;         
    float stopBits;                 
    usartFlowControl flowControl;   
    unsigned char noinitBits;       
    char rdu;                       
}usartConnectParameters;
typedef struct dfuConnectParameters
{
    char *usb_index;
    char rdu;                       
}dfuConnectParameters;
typedef struct spiConnectParameters
{
    uint32_t baudrate ;        
    uint16_t crcPol   ;        
    int direction     ;        
    int cpha          ;        
    int cpol          ;        
    int crc           ;        
    int firstBit      ;        
    int frameFormat   ;        
    int dataSize      ;        
    int mode          ;        
    int nss           ;        
    int nssPulse      ;        
    int delay         ;        
} spiConnectParameters;
typedef struct canConnectParameters
{
    int br     ;                
    int mode   ;                
    int ide    ;                
    int rtr    ;                
    int fifo   ;                
    int fm     ;                
    int fs     ;                
    int fe     ;                
    char fbn   ;                
} canConnectParameters;
typedef struct i2cConnectParameters
{
    int add      ;               
    int br       ;               
    int sm       ;               
    int am       ;               
    int af       ;               
    int df       ;               
    char dnf     ;               
    int rt       ;               
    int ft       ;               
} i2cConnectParameters;
typedef enum targetInterfaceType
{
    STLINK_INTERFACE = 0,           
    USART_INTERFACE  = 1,           
    USB_INTERFACE    = 2,           
    SPI_INTERFACE    = 3,           
    I2C_INTERFACE    = 4,           
    CAN_INTERFACE    = 5            
}targetInterfaceType;
typedef struct displayCallBacks
{
    void (*initProgressBar)();                              
    void (*logMessage)(int msgType,  const wchar_t* str);   
    void (*loadBar)(int x, int n);                          
} displayCallBacks;
typedef struct segmentData_C
{
    int address;                    
    int size;                       
    unsigned char* data;            
}segmentData_C ;
typedef struct fileData_C
{
    int Type;                       
    int segmentsNbr;                
    segmentData_C* segments;        
}fileData_C ;
typedef struct generalInf
{
    unsigned short deviceId;       
    int  flashSize;                 
    char type[4];                   
    char cpu[20];                   
    char name[100];                 
    char series[100];               
    char description[150];          
    char revisionId[100];           
    char board[100];                
}generalInf ;
int getUsartList(usartConnectParameters** usartList);
int getDfuDeviceList(dfuDeviceInfo** dfuList,int iPID, int iVID);
int connectDfuBootloader(char* usbIndex);
int connectDfuBootloader2(dfuConnectParameters dfuParameters);
int connectSpiBootloader(spiConnectParameters spiParameters);
int connectCanBootloader(canConnectParameters canParameters);
int connectI2cBootloader(i2cConnectParameters i2cParameters);
void setDisplayCallbacks(displayCallBacks c);
void setVerbosityLevel(int level);
int checkDeviceConnection();
generalInf* getDeviceGeneralInf();
int readMemory(unsigned int address, unsigned char** data, unsigned int size);
int writeMemory(unsigned int address, char* data, unsigned int size);
int downloadFile(const wchar_t* filePath, unsigned int address, unsigned int skipErase, unsigned int verify, const wchar_t* binPath);
int execute(unsigned int address);
int massErase(char* sFlashMemName);
int sectorErase(unsigned int sectors[],unsigned int sectorNbr, char* sFlashMemName);
int readUnprotect();
int  getTargetInterfaceType();
volatile int* getCancelPointer();
void *fileOpen(const wchar_t* filePath);
void freeFileData(fileData_C* data);
int verify(fileData_C* fileData, unsigned int address);
int saveFileToFile(fileData_C *fileData, const wchar_t* sFileName);
int saveMemoryToFile(int address, int size, const wchar_t* sFileName);
void disconnect();
void deleteInterfaceList();