caller/src/bindings.rs

extern "C" {
    #[doc = " \\brief This routine allows to get connected DFU devices."]
    #[doc = " \\param dfuList : Receive DFU devices list and its default configurations."]
    #[doc = " \\param iPID : Indicate the Product ID to be used for DFU interface."]
    #[doc = " \\param iVID : Indicate the Vendor ID to be used for DFU interface."]
    #[doc = " \\return Number of DFU devices already connected."]
    #[doc = " \\note  At the end of usage, #deleteInterfaceList must have been called."]
    pub fn getDfuDeviceList(
        dfuList: *mut *mut dfuDeviceInfo,
        iPID: ::std::os::raw::c_int,
        iVID: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start a simple connection through USB DFU interface."]
    #[doc = " \\param usbIndex : Indicates the index of DFU ports already connected."]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    pub fn connectDfuBootloader(usbIndex: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through USB DFU interface."]
    #[doc = " \\param dfuConnectParameters : Indicates the dfu connection parameters"]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    #[doc = " \\note  It's recommanded to use this routine to disable readout protection when connecting a MCU based device."]
    pub fn connectDfuBootloader2(dfuParameters: dfuConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through SPI interface."]
    #[doc = " \\param spiParameters : Indicates customized configuration for  SPI connection"]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    pub fn connectSpiBootloader(spiParameters: spiConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through CAN interface."]
    #[doc = " \\param canParameters : Indicates customized configuration for  CAN connection"]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    #[doc = " \\warning To have CAN full support, you must have St-Link firmware version at least v3JxMxB2."]
    pub fn connectCanBootloader(canParameters: canConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to start connection to device through I2C interface."]
    #[doc = " \\param i2cParameters : Indicates customized configuration for  I2C connection"]
    #[doc = " \\return 0 if the connection successfully established, otherwise an error occurred."]
    pub fn connectI2cBootloader(i2cParameters: i2cConnectParameters) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to choose your custom display."]
    #[doc = " \\param c : Fill the struct to customize the display tool."]
    #[doc = " \\note This function must be called first of all to ensure the display management."]
    pub fn setDisplayCallbacks(c: displayCallBacks);
}
extern "C" {
    #[doc = " \\brief This routine allows to choose the verbosity level for display."]
    #[doc = " \\param level : Indicates the verbosity number 0, 1 or 3."]
    pub fn setVerbosityLevel(level: ::std::os::raw::c_int);
}
extern "C" {
    #[doc = " \\brief This routine allows to check connection status [maintained or lost]."]
    #[doc = " \\return 1 if the device is already connected, otherwise the connection to device is lost."]
    pub fn checkDeviceConnection() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to get general device informations."]
    #[doc = " \\return Structure #GeneralInf in which the informations are stored."]
    pub fn getDeviceGeneralInf() -> *mut generalInf;
}
extern "C" {
    #[doc = " \\brief This routine allows to receive memory data on the used interface with the configration already initialized."]
    #[doc = " \\param address   : The address to start reading from."]
    #[doc = " \\param data      : Pointer to the data buffer."]
    #[doc = " \\param size      : It indicates the size for read data."]
    #[doc = " \\return 0 if the reading operation correctly finished, otherwise an error occurred."]
    #[doc = " \\warning Unlike ST-LINK interface, the Bootloader interface can access only to some specific memory regions."]
    pub fn readMemory(
        address: ::std::os::raw::c_uint,
        data: *mut *mut ::std::os::raw::c_uchar,
        size: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to write memory data on the user interface with the configration already initialized."]
    #[doc = " \\param address   : The address to start writing from."]
    #[doc = " \\param data      : Pointer to the data buffer."]
    #[doc = " \\param size      : It indicates the size for write data."]
    #[doc = " \\return 0 if the writing operation correctly finished, otherwise an error occurred."]
    #[doc = " \\warning Unlike ST-LINK interface, the Bootloader interface can access only to some specific memory regions."]
    pub fn writeMemory(
        address: ::std::os::raw::c_uint,
        data: *mut ::std::os::raw::c_char,
        size: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to download data from a file to the memory."]
    #[doc = " File formats that are supported : hex, bin, srec, tsv, elf, axf, out, stm32, ext"]
    #[doc = " \\param filePath  : Indicates the full path of the considered file."]
    #[doc = " \\param address   : The address to start downloading from."]
    #[doc = " \\param skipErase : In case to win in term time and if we have a blank device, we can skip erasing memory before programming [skipErase=0]."]
    #[doc = " \\param verify    : To add verification step after downloading."]
    #[doc = " \\param binPath   : Path of the binary file."]
    #[doc = " \\return 0 if the downloading operation correctly finished, otherwise an error occurred."]
    pub fn downloadFile(
        filePath: *const wchar_t,
        address: ::std::os::raw::c_uint,
        skipErase: ::std::os::raw::c_uint,
        verify: ::std::os::raw::c_uint,
        binPath: *const wchar_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to run the application."]
    #[doc = " \\param address : The address to start executing from."]
    #[doc = " In most cases, the program will run from the Flash memory starting from 0x08000000."]
    #[doc = " \\return 0 if the execution correctly started, otherwise an error occurred."]
    pub fn execute(address: ::std::os::raw::c_uint) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to erase the whole Flash memory."]
    #[doc = " \\return 0 if the operation finished successfully, otherwise an error was occurred."]
    #[doc = " \\note Depending on the device, this routine can take a particular period of time."]
    pub fn massErase(sFlashMemName: *mut ::std::os::raw::c_char) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to erase specific sectors of the Flash memory."]
    #[doc = " \\param sectors   : Indicates the indexs of the specific sectors to be erased."]
    #[doc = " \\param sectorNbr : The number of chosen sectors."]
    #[doc = " \\return 0 if the operation finished successfully, otherwise an error occurred."]
    #[doc = " \\note Each circuit has a specific number of Flash memory sectors."]
    pub fn sectorErase(
        sectors: *mut ::std::os::raw::c_uint,
        sectorNbr: ::std::os::raw::c_uint,
        sFlashMemName: *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to disable the readout protection."]
    #[doc = " If the memory is not protected, a message appears to indicate that the device is not"]
    #[doc = " under Readout protection and the command has no effects."]
    #[doc = " \\return 0 if the disabling correctly accomplished, otherwise an error occurred."]
    #[doc = " \\note Depending on the device used, this routine take a specific time."]
    pub fn readUnprotect() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to know the interface what is in use."]
    #[doc = " \\return The target interface type #targetInterfaceType, otherwise -1."]
    pub fn getTargetInterfaceType() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to drop the current read/write operation."]
    #[doc = " \\return 0 if there is no call for stop operation, otherwise 1."]
    pub fn getCancelPointer() -> *mut ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to open and get data from any supported file extension."]
    #[doc = " \\param filePath : Indicates the full path of the considered file."]
    #[doc = " \\return Pointer to #fileData_C if the file has hex, bin, srec or elf as extension, otherwise a null pointer to indicate that the file type is not supported."]
    pub fn fileOpen(filePath: *const wchar_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " \\brief This routine allows to clean up the handled file data."]
    #[doc = " \\param data"]
    pub fn freeFileData(data: *mut fileData_C);
}
extern "C" {
    #[doc = " \\brief This routine allows to verfiy if the indicated file data is identical to Flash memory content."]
    #[doc = " \\param fileData : Input file name."]
    #[doc = " \\param address  : The address to start verifying from, it's considered only if the file has .bin or .binary as extension."]
    #[doc = " \\return 0 if the file data matching Flash memory content, otherwise an error occurred or the data is mismatched."]
    pub fn verify(
        fileData: *mut fileData_C,
        address: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to save the data file content to another file."]
    #[doc = " \\param fileData  : Input file name."]
    #[doc = " \\param sFileName : Output file name."]
    #[doc = " \\return 0 if the output file was created successfully, otherwise an error occurred."]
    pub fn saveFileToFile(
        fileData: *mut fileData_C,
        sFileName: *const wchar_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to save Flash memory content to file."]
    #[doc = " \\param address   : The address to start saving from."]
    #[doc = " \\param size      : Data size to be saved."]
    #[doc = " \\param sFileName : Indicates the file name."]
    #[doc = " \\return 0 if the data copy was acheived successfully, otherwise an error occurred."]
    #[doc = " \\note The file name must finish with an extension \".hex\", \".bin\" or \".srec\""]
    pub fn saveMemoryToFile(
        address: ::std::os::raw::c_int,
        size: ::std::os::raw::c_int,
        sFileName: *const wchar_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief This routine allows to clean up and disconnect the current connected target."]
    #[doc = " \\note This routine disconnect the target and delete the loaded Flash Loaders."]
    pub fn disconnect();
}
extern "C" {
    #[doc = " \\brief This routine allows to clear the list of each created interface."]
    #[doc = " \\note The list is filled by #getStlinkList, #getDfuDeviceList or #getUsartList."]
    pub fn deleteInterfaceList();
}
